[project]
name = "flasx"
version = "0.1.0"
description = "This flasx project is for example in PSU mobile development class in 1/2568 semester."
authors = [
    {name = "adithep.b",email = "adithepbaebmueann@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
